--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,21 @@ html,
 body {
   scroll-behavior: smooth;
 }
+
+.spinner {
+  border: 16px solid #bbbabf; /* Light grey */
+  border-top: 16px solid #be1622; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
